--- a/app/src/main/res/layout/activity_search_id.xml
+++ b/app/src/main/res/layout/activity_search_id.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/viewRecordBtn"
+        android:id="@+id/searchStudBtn"
         android:layout_width="252dp"
         android:layout_height="52dp"
         android:layout_marginTop="20dp"
@@ -45,6 +45,6 @@
         android:alpha="0.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewRecordBtn"
+        app:layout_constraintTop_toBottomOf="@+id/searchStudBtn"
         app:srcCompat="@drawable/logo_white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
