--- a/app/src/main/res/layout/activity_search_date.xml
+++ b/app/src/main/res/layout/activity_search_date.xml
@@ -10,17 +10,17 @@
         android:id="@+id/searchStudBtn"
         android:layout_width="252dp"
         android:layout_height="52dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round_btn"
         android:backgroundTint="#FFFFFF"
-        android:text="Search Student"
+        android:text="Search Date"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:backgroundTint="#3BC393"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView2" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -34,14 +34,20 @@
         app:layout_constraintTop_toBottomOf="@+id/searchStudBtn"
         app:srcCompat="@drawable/logo_white" />
 
-    <CalendarView
-        android:id="@+id/calendarView2"
-        android:layout_width="298dp"
-        android:layout_height="246dp"
-        android:layout_marginTop="40dp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="252dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="176dp"
+        android:backgroundTint="#30000000"
+        android:text="Pick a Date"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeWidth="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
