--- a/app/src/main/res/layout/activity_select_file.xml
+++ b/app/src/main/res/layout/activity_select_file.xml
@@ -46,12 +46,13 @@
         android:id="@+id/importBtn"
         android:layout_width="252dp"
         android:layout_height="52dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_btn"
         android:backgroundTint="#FFFFFF"
         android:text="Import File"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
+
         app:backgroundTint="#3BC393"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -60,13 +61,26 @@
 
     <ImageView
         android:id="@+id/imageViewSF"
-        android:layout_width="380dp"
-        android:layout_height="352dp"
+        android:layout_width="320dp"
+        android:layout_height="310dp"
         android:alpha="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo_white" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/ic_baseline_info_24_gray"
+        android:drawablePadding="10dp"
+        android:text="Tapping 'IMPORT FILE' will replace any\nexisting Student Data currently saved on\nthis device with new data contained in\nthe file located at the specified File Path.\nProceed with caution."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/importBtn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
