--- a/app/src/main/res/layout/activity_search_class.xml
+++ b/app/src/main/res/layout/activity_search_class.xml
@@ -16,7 +16,7 @@
         android:text="Search Class"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:backgroundTint="#3BC393"
+        app:backgroundTint="#2A5C99"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,11 +26,11 @@
         android:id="@+id/imageView4"
         android:layout_width="393dp"
         android:layout_height="358dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logo_white" />
+        app:srcCompat="@drawable/bcc_logo_transpa_nav" />
 
     <EditText
         android:id="@+id/year"
