--- a/app/src/main/res/layout/activity_search_date.xml
+++ b/app/src/main/res/layout/activity_search_date.xml
@@ -16,7 +16,7 @@
         android:text="Search Date"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:backgroundTint="#3BC393"
+        app:backgroundTint="#2A5C99"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +26,12 @@
         android:id="@+id/imageView4"
         android:layout_width="380dp"
         android:layout_height="352dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectedDateBtn"
-        app:srcCompat="@drawable/logo_white" />
+        app:srcCompat="@drawable/bcc_logo_transpa_nav" />
 
     <Button
         android:id="@+id/datePickerBtn"
