--- a/app/src/main/res/layout/activity_search_id.xml
+++ b/app/src/main/res/layout/activity_search_id.xml
@@ -32,7 +32,7 @@
         android:text="Search Student"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:backgroundTint="#3BC393"
+        app:backgroundTint="#2A5C99"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,9 +42,9 @@
         android:id="@+id/imageView4"
         android:layout_width="380dp"
         android:layout_height="352dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchStudBtn"
-        app:srcCompat="@drawable/logo_white" />
+        app:srcCompat="@drawable/bcc_logo_transpa_nav" />
 </androidx.constraintlayout.widget.ConstraintLayout>
