--- a/app/src/main/res/layout/list_item_class.xml
+++ b/app/src/main/res/layout/list_item_class.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#502A5C99">
 
     <TextView
         android:id="@+id/nameTextItemForClass"
@@ -24,7 +25,7 @@
         android:layout_height="27dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#BDBDBD"
+        android:background="#2A5C99"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameTextItemForClass"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +49,7 @@
         android:layout_height="27dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#BDBDBD"
+        android:background="#2A5C99"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dateTextItemForClass"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +73,7 @@
         android:layout_height="27dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#BDBDBD"
+        android:background="#2A5C99"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/timeTextItemForClass"
         app:layout_constraintTop_toTopOf="parent" />
