--- a/app/src/main/res/layout/activity_select_file.xml
+++ b/app/src/main/res/layout/activity_select_file.xml
@@ -11,6 +11,7 @@
         android:layout_width="252dp"
         android:layout_height="57dp"
         android:layout_marginTop="72dp"
+        android:background="@drawable/round_corner_btn"
         android:backgroundTint="#30000000"
         android:text="Select XLSX File"
         android:textAllCaps="false"
