fixed recycler view colors

--- a/app/src/main/res/layout/list_item_class.xml
+++ b/app/src/main/res/layout/list_item_class.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#502A5C99">
+    android:background="@color/light_b_lighter">
 
     <TextView
         android:id="@+id/nameTextItemForClass"
@@ -90,5 +90,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divider7"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider8"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+
+        android:background="#2A5C99"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
