--- a/app/src/main/res/layout/activity_result_view.xml
+++ b/app/src/main/res/layout/activity_result_view.xml
@@ -47,7 +47,7 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="391dp"
         android:layout_height="399dp"
-        android:background="#5014C0CC"
+        android:background="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider3">
