--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="navy">#FF2A5C99</color>
     <color name="light_b">#FF14C0CC</color>
+    <color name="light_b_lighter">#5014C0CC</color>
     <color name="purple_200">#FF14C0CC</color>
     <color name="purple_500">#FF14C0CC</color>
     <color name="purple_700">#FF14C0CC</color>
@@ -9,4 +10,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#50BDBDBD</color>
 </resources>
