--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="20dp"
+        android:textColor="#90FFFFFF"
         android:textColorHint="#90FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
